# azure-enterprise-platform-lab

./: .editorconfig  .gitignore  README.md
.github/workflows/: cd.yml  ci.yml  security.yml  terraform-ci.yml
application/: .dockerignore  Dockerfile  pyproject.toml
application/src/azure_platform_api/: config.py  main.py
application/src/azure_platform_api/middleware/: correlation_id.py
application/src/azure_platform_api/models/: responses.py
application/src/azure_platform_api/routers/: api_v1.py  health.py
application/tests/: conftest.py  test_api_v1.py  test_correlation_id.py  test_health.py
docs/: COST-CONTROL.md  ROADMAP.md
docs/adr/: ADR-0001-provisioning-strategy.md
docs/architecture/: development-network.md
docs/evidence/: container-platform-foundation.md  continuous-deployment-foundation.md  development-network-foundation.md  governance-cost-controls-foundation.md  security-scanning-foundation.md
infrastructure/bootstrap/: locals.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
infrastructure/environments/dev/: .terraform.lock.hcl  backend.hcl.example  github_oidc.tf  github_oidc_outputs.tf  locals.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
infrastructure/modules/container_apps/: main.tf  outputs.tf  variables.tf
infrastructure/modules/container_registry/: main.tf  outputs.tf  variables.tf
infrastructure/modules/github_oidc/: main.tf  outputs.tf  variables.tf  versions.tf
infrastructure/modules/governance/: main.tf  outputs.tf  variables.tf  versions.tf
(+8 files in other folders)
