[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-enterprise-platform-api"
version = "0.1.0"
description = "API service for the Azure Enterprise Platform Lab"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.51.0",
]

[project.optional-dependencies]
dev = [
    "httpx2==2.7.0",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "ruff==0.15.21",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
]

[tool.coverage.run]
branch = true
source = ["azure_platform_api"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
